[package]
name = "clinbox"
version = "0.2.0"
edition = "2024"
description = "A terminal-first email client with AI-powered triage"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
open = "5"
urlencoding = "2"

# HTML to text
html2text = "0.14"
